# s7-comm

./: .rustfmt.toml  Cargo.toml  README.md
copt/: Cargo.toml
copt/src/: builder.rs  error.rs  lib.rs  packet.rs
copt/src/builder/: connect_builder.rs  dt_data_builder.rs
copt/tests/: frame_ack_data_decode.rs
examples/: cotp_connect.rs
s7-client/: Cargo.toml
s7-client/examples/: client-example.rs  cotp_connect.rs
s7-client/src/: client.rs  codec.rs  error.rs  lib.rs
s7-client/src/builder/: copt_connect_request.rs  s7_read.rs  s7_write.rs
s7-client/src/client/: param.rs  request_param.rs
s7-comm/: Cargo.toml
s7-comm/examples/: cotp_connect.rs
s7-comm/src/: error.rs  packet.rs
s7-comm/src/builder/: job_read_var.rs  job_write_var.rs  mod.rs
s7-comm/tests/: copt_encode_test.rs  frame_job_setup_test.rs  tpkt_test.rs
s7-comm/tests/test_data/: test_copt_data.rs  test_tpkt_data.rs
s7-util/: Cargo.toml
s7-util/examples/: cotp_connect.rs
s7-util/src/: error.rs  lib.rs
s7-util/src/builder/: copt_connect_request.rs  copt_setup.rs  mod.rs  s7_setup.rs  s7_write.rs
src/: error.rs  lib.rs  packet.rs
src/builder/: job_read_var.rs  job_setup.rs  job_write_var.rs  mod.rs
tests/: copt_decode_test.rs  copt_encode_test.rs  frame_ack_data_decode.rs  frame_job_read_var_test.rs  frame_job_setup_test.rs  frame_job_write_var_test.rs  test_data.rs
tests/test_data/: test_copt_data.rs  test_s7_comm_data.rs  test_tpkt_data.rs
tpkt/: Cargo.toml
tpkt/src/: error.rs  lib.rs  packet.rs
