[workspace]
members = [".", "tpkt", "copt"]

[package]
name = "s7-comm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = {version = "0.7.8", features = ["codec"]}
bytes = "1.4.0"
anyhow = "1.0.71"
num_enum = "0.6.1"