[workspace]
members = [".", "tpkt", "copt"]

[package]
name = "s7-comm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = {version = "0.7.8", features = ["codec"]}
bytes = "1.4.0"
num_enum = "0.6.1"
log = "0.4.17"
thiserror = "1.0.40"
copt = {path = "copt"}
tpkt = {path = "tpkt"}

[dev-dependencies]
tokio = {version = "1.28.0", features = ["full"]}
anyhow = "1.0.71"
custom-utils = "0.10.14"