[package]
name = "copt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = {version = "0.7.8", features = ["codec"]}
bytes = "1.4.0"
thiserror = "1.0.40"

[dev-dependencies]
s7-comm = { path = ".."}