[package]
name = "s7-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
log = "0.4.17"
s7-comm = { path = ".."}
copt = {path = "../copt"}
tpkt = {path = "../tpkt"}
thiserror = "1.0.40"
tokio-util = "0.7.8"


[dev-dependencies]
tokio = {version = "1.28.0", features = ["full"]}
anyhow = "1.0.71"
custom-utils = "0.10.14"